--- a/src/components/CowPen/CowPen.sass
+++ b/src/components/CowPen/CowPen.sass
@@ -58,14 +58,31 @@
           animation-timing-function: ease-out
           animation-iteration-count: 1
 
-  .is-transitioning
-    img
-      animation-name: is-transitioning-keyframes
-      animation-duration: 500ms
-      animation-fill-mode: forwards
-      animation-timing-function: linear
-      animation-iteration-count: infinite
+    .is-transitioning
+      img
+        animation-name: is-transitioning-keyframes
+        animation-duration: 500ms
+        animation-fill-mode: forwards
+        animation-timing-function: linear
+        animation-iteration-count: infinite
+    .manure-manager
+    transition: transform 0.2s ease
+    pointer-events: none
 
+    img
+      filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.5))
+
+    &:hover
+      transform: scale(1.1)
+
+  .manure-manager-tooltip-target
+    position: absolute
+    width: 100%
+    height: 100%
+    top: 0
+    left: 0
+    pointer-events: auto
+    
   .happiness-boosts-today
     bottom: -12px
     display: flex
