Changed the process of milking cows to account for sustainability

--- a/src/components/Navigation/Navigation.sass
+++ b/src/components/Navigation/Navigation.sass
@@ -92,3 +92,10 @@
     font-size: .75em
     padding: .5em 0
     text-align: center
+
+  .button-array
+    display: flex
+    gap: 0.5em
+    margin: 0 1em
+    flex-wrap: nowrap
+    justify-content: center
