--- a/src/components/Home/Home.sass
+++ b/src/components/Home/Home.sass
@@ -22,3 +22,16 @@
   .MuiButton-containedPrimary
     display: block
     margin: 0 auto
+
+  .video-container
+    position: relative
+    padding-bottom: 56.25% // 16:9 aspect ratio
+    height: 0
+    overflow: hidden
+
+  iframe
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
